--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.1",
     "next": "14.2.15",
+    "posthog-js": "^1.160.0",
     "react": "^18",
     "react-dom": "^18"
   },
